--- a/worksheet/static/css/worksheet.css
+++ b/worksheet/static/css/worksheet.css
@@ -123,8 +123,20 @@ body {
   }
   
   #repeat-buttons button {
-    display: inline-block;
     background-color: #f1bb4e;
+  }
+
+  button.submit {
+    background-color: #156bbb;
+  }
+
+  button.submit:active {
+    background-color: #0b4983;
+  }
+
+  #repeat-buttons button {
+    display: inline-block;
+  
     padding: 0.3em 1.2em;
     margin:0 0.1em 0.1em 0;
     border:0.16em solid rgba(255,255,255,0);
