--- a/worksheet/static/css/worksheet.css
+++ b/worksheet/static/css/worksheet.css
@@ -156,7 +156,7 @@ body {
     border-color: rgba(196,196,196,1);
   }
   
-  #repeat-buttons button:active{
+  #buttons button:active{
     background-color: #f5af23;
   }
   
