--- a/worksheet/static/css/worksheet.css
+++ b/worksheet/static/css/worksheet.css
@@ -146,7 +146,7 @@ body {
     font-family: 'Roboto',sans-serif;
     font-weight: 300;
     color: #FFFFFF;
-    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    /* text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35); */
     text-align: center;
     transition: all 0.2s;
     margin: 10px;
