--- a/worksheet/static/css/worksheet.css
+++ b/worksheet/static/css/worksheet.css
@@ -161,7 +161,7 @@ body {
 
   #worksheet .input textarea {
     min-height: 40px !important;
-    width: 100% !important;
+    min-width: 240px !important;
   }
 
   /* #worksheet .input.editing textarea {
