--- a/worksheet/static/css/worksheet.css
+++ b/worksheet/static/css/worksheet.css
@@ -135,7 +135,7 @@ body {
     background-color: #0b4983;
   }
 
-  #worksheet button {
+  .worksheet-root button {
     display: inline-block;
   
     padding: 0.3em 1.2em;
@@ -153,7 +153,7 @@ body {
     background-image: none !important;
   }
   
-  #worksheet button:hover{
+  .worksheet-root button:hover{
     border-color: rgba(196,196,196,1);
   }
   
@@ -161,25 +161,25 @@ body {
     background-color: #e4a01a;
   }
 
-  #worksheet .input textarea {
+  .worksheet-root .input textarea {
     min-height: 60px !important;
     min-width: 240px !important;
     vertical-align: top;
   }
 
-  #worksheet .input > textarea.visible {
+  .worksheet-root .input > textarea.visible {
     display: inline-block;
   }
 
-  #worksheet .input > pre.visible {
+  .worksheet-root .input > pre.visible {
     display: inline-block;
   }
 
-  #worksheet .input > textarea:not(.visible) {
+  .worksheet-root .input > textarea:not(.visible) {
     display: none;
   }
 
-  #worksheet .input >  pre:not(.visible) {
+  .worksheet-root .input >  pre:not(.visible) {
     display: none;
   }
 
